informacion de cada columna de: datos_hosting.json

--- a/conociendo_el_problema/entendiendo_el_problema.ipynb
+++ b/conociendo_el_problema/entendiendo_el_problema.ipynb
@@ -307,6 +307,48 @@
     "datos = pd.json_normalize(datos['info_inmuebles']) # Normalizamos la columna 'info_inmuebles'\n",
     "datos.head()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3836ddc",
+   "metadata": {},
+   "source": [
+    "## En este curso trabajaremos con el conjunto de datos presentes en el archivo datos_hosting.json y, para avanzar en nuestros estudios sobre los datos que proporciona este archivo, entenderemos qué información trae cada columna.\n",
+    "\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aeae1d35",
+   "metadata": {},
+   "source": [
+    "```evaluacion_general:``` se refiere a la puntuación media otorgada para evaluar el alojamiento en la propiedad.\n",
+    "\n",
+    "```experiencia_local:``` describe las experiencias ofrecidas durante su estancia en la propiedad.\n",
+    "\n",
+    "```max_hospedes:``` informa el número máximo de invitados que permite la ubicación.\n",
+    "\n",
+    "```descripcion_local:``` describe la propiedad.\n",
+    "\n",
+    "```descripcion_vecindad:``` describe el vecindario alrededor de la propiedad.\n",
+    "\n",
+    "```cantidad_baños:``` informa el número de baños disponibles.\n",
+    "\n",
+    "```cantidad_cuartos:``` informa el número de habitaciones disponibles.\n",
+    "\n",
+    "```cantidad_camas:``` informa el número de camas disponibles.\n",
+    "\n",
+    "```modelo_cama:``` informa el modelo de cama ofrecido.\n",
+    "\n",
+    "```comodidades:``` informa las comodidades que ofrece la propiedad.\n",
+    "\n",
+    "```cuota_deposito:``` informa la tarifa mínima de depósito para la seguridad del hosting.\n",
+    "\n",
+    "```cuota_limpieza:``` informa el cargo cobrado por el servicio de limpieza.\n",
+    "\n",
+    "```precio:``` se refiere al precio base a cobrar por la estancia diaria en la propiedad."
+   ]
   }
  ],
  "metadata": {
