--- a/desafios_proyectos/desafios.ipynb
+++ b/desafios_proyectos/desafios.ipynb
@@ -23,6 +23,199 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "99517cc5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "885ed9c5",
+   "metadata": {},
+   "source": [
+    "### Leyendo el Archivo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "cb850b14",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dados_vendas</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>{'Data de venda': '06/06/2022', 'Cliente': ['@...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>{'Data de venda': '07/06/2022', 'Cliente': ['I...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>{'Data de venda': '08/06/2022', 'Cliente': ['I...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>{'Data de venda': '09/06/2022', 'Cliente': ['J...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>{'Data de venda': '10/06/2022', 'Cliente': ['M...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        dados_vendas\n",
+       "0  {'Data de venda': '06/06/2022', 'Cliente': ['@...\n",
+       "1  {'Data de venda': '07/06/2022', 'Cliente': ['I...\n",
+       "2  {'Data de venda': '08/06/2022', 'Cliente': ['I...\n",
+       "3  {'Data de venda': '09/06/2022', 'Cliente': ['J...\n",
+       "4  {'Data de venda': '10/06/2022', 'Cliente': ['M..."
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos = pd.read_json('dados_vendas_clientes.json')\n",
+    "datos.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73f6eea4",
+   "metadata": {},
+   "source": [
+    "### Normalizando el archivo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7c685137",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Data de venda</th>\n",
+       "      <th>Cliente</th>\n",
+       "      <th>Valor da compra</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>06/06/2022</td>\n",
+       "      <td>[@ANA _LUCIA 321, DieGO ARMANDIU 210, DieGO AR...</td>\n",
+       "      <td>[R$ 836,5, R$ 573,33, R$ 392,8, R$ 512,34]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>07/06/2022</td>\n",
+       "      <td>[Isabely JOanes 738, Isabely JOanes 738, Isabe...</td>\n",
+       "      <td>[R$ 825,31, R$ 168,07, R$ 339,18, R$ 314,69]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>08/06/2022</td>\n",
+       "      <td>[Isabely JOanes 738, JOãO Gabriel 671, Julya m...</td>\n",
+       "      <td>[R$ 682,05, R$ 386,34, R$ 622,65, R$ 630,79]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>09/06/2022</td>\n",
+       "      <td>[Julya meireles 914, MaRIA Julia 444, MaRIA Ju...</td>\n",
+       "      <td>[R$ 390,3, R$ 759,16, R$ 334,47, R$ 678,78]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10/06/2022</td>\n",
+       "      <td>[MaRIA Julia 444, PEDRO PASCO 812, Paulo castr...</td>\n",
+       "      <td>[R$ 314,24, R$ 311,15, R$ 899,16, R$ 885,24]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Data de venda                                            Cliente  \\\n",
+       "0    06/06/2022  [@ANA _LUCIA 321, DieGO ARMANDIU 210, DieGO AR...   \n",
+       "1    07/06/2022  [Isabely JOanes 738, Isabely JOanes 738, Isabe...   \n",
+       "2    08/06/2022  [Isabely JOanes 738, JOãO Gabriel 671, Julya m...   \n",
+       "3    09/06/2022  [Julya meireles 914, MaRIA Julia 444, MaRIA Ju...   \n",
+       "4    10/06/2022  [MaRIA Julia 444, PEDRO PASCO 812, Paulo castr...   \n",
+       "\n",
+       "                                Valor da compra  \n",
+       "0    [R$ 836,5, R$ 573,33, R$ 392,8, R$ 512,34]  \n",
+       "1  [R$ 825,31, R$ 168,07, R$ 339,18, R$ 314,69]  \n",
+       "2  [R$ 682,05, R$ 386,34, R$ 622,65, R$ 630,79]  \n",
+       "3   [R$ 390,3, R$ 759,16, R$ 334,47, R$ 678,78]  \n",
+       "4  [R$ 314,24, R$ 311,15, R$ 899,16, R$ 885,24]  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos = pd.json_normalize(datos['dados_vendas'])\n",
+    "datos.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ad8e3951",
    "metadata": {},
@@ -43,11 +236,224 @@
     "\n",
     "Con esta información, el desafío del proyecto 2: administración del condominio será similar al desafío del proyecto 1, abrir la base de datos con Pandas y aplicar json_normalize al DataFrame."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f7a02d11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87d378f1",
+   "metadata": {},
+   "source": [
+    "### Leyendo el Archivo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "12b206a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dados_locacao</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>{'apartamento': 'A101 (blocoAP)', 'datas_combi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>{'apartamento': 'A102 (blocoAP)', 'datas_combi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>{'apartamento': 'B201 (blocoAP)', 'datas_combi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>{'apartamento': 'B202 (blocoAP)', 'datas_combi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>{'apartamento': 'C301 (blocoAP)', 'datas_combi...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                       dados_locacao\n",
+       "0  {'apartamento': 'A101 (blocoAP)', 'datas_combi...\n",
+       "1  {'apartamento': 'A102 (blocoAP)', 'datas_combi...\n",
+       "2  {'apartamento': 'B201 (blocoAP)', 'datas_combi...\n",
+       "3  {'apartamento': 'B202 (blocoAP)', 'datas_combi...\n",
+       "4  {'apartamento': 'C301 (blocoAP)', 'datas_combi..."
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos = pd.read_json('dados_locacao_imoveis.json')\n",
+    "datos.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ccf15d2",
+   "metadata": {},
+   "source": [
+    "### Normalizando el Archivo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "52955b3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>apartamento</th>\n",
+       "      <th>datas_combinadas_pagamento</th>\n",
+       "      <th>datas_de_pagamento</th>\n",
+       "      <th>valor_aluguel</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A101 (blocoAP)</td>\n",
+       "      <td>[01/06/2022, 01/07/2022]</td>\n",
+       "      <td>[05/06/2022, 03/07/2022]</td>\n",
+       "      <td>[$ 1000,0 reais, $ 2500,0 reais]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A102 (blocoAP)</td>\n",
+       "      <td>[02/06/2022, 02/07/2022]</td>\n",
+       "      <td>[02/06/2022, 06/07/2022]</td>\n",
+       "      <td>[$ 1100,0 reais, $ 2600,0 reais]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>B201 (blocoAP)</td>\n",
+       "      <td>[03/06/2022, 03/07/2022]</td>\n",
+       "      <td>[07/06/2022, 03/07/2022]</td>\n",
+       "      <td>[$ 1200,0 reais, $ 2700,0 reais]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>B202 (blocoAP)</td>\n",
+       "      <td>[04/06/2022, 04/07/2022]</td>\n",
+       "      <td>[07/06/2022, 05/07/2022]</td>\n",
+       "      <td>[$ 1300,0 reais, $ 2800,0 reais]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>C301 (blocoAP)</td>\n",
+       "      <td>[05/06/2022, 05/07/2022]</td>\n",
+       "      <td>[10/06/2022, 09/07/2022]</td>\n",
+       "      <td>[$ 1400,0 reais, $ 2900,0 reais]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      apartamento datas_combinadas_pagamento        datas_de_pagamento  \\\n",
+       "0  A101 (blocoAP)   [01/06/2022, 01/07/2022]  [05/06/2022, 03/07/2022]   \n",
+       "1  A102 (blocoAP)   [02/06/2022, 02/07/2022]  [02/06/2022, 06/07/2022]   \n",
+       "2  B201 (blocoAP)   [03/06/2022, 03/07/2022]  [07/06/2022, 03/07/2022]   \n",
+       "3  B202 (blocoAP)   [04/06/2022, 04/07/2022]  [07/06/2022, 05/07/2022]   \n",
+       "4  C301 (blocoAP)   [05/06/2022, 05/07/2022]  [10/06/2022, 09/07/2022]   \n",
+       "\n",
+       "                      valor_aluguel  \n",
+       "0  [$ 1000,0 reais, $ 2500,0 reais]  \n",
+       "1  [$ 1100,0 reais, $ 2600,0 reais]  \n",
+       "2  [$ 1200,0 reais, $ 2700,0 reais]  \n",
+       "3  [$ 1300,0 reais, $ 2800,0 reais]  \n",
+       "4  [$ 1400,0 reais, $ 2900,0 reais]  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos = pd.json_normalize(datos['dados_locacao'])\n",
+    "datos.head()"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
