--- a/conociendo_el_problema/entendiendo_el_problema.ipynb
+++ b/conociendo_el_problema/entendiendo_el_problema.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "e2291b29",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "a491a914",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
        "4  {'evaluacion_general': '10.0', 'experiencia_lo..."
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "6038faba",
    "metadata": {},
    "outputs": [
@@ -217,7 +217,7 @@
        "1  [$350.00, $300.00, $425.00, $300.00, $285.00, ...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "c16d1add",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
        " 'precio']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "dbed8443",
    "metadata": {},
    "outputs": [
@@ -471,7 +471,7 @@
        "2                                          [$975.00]  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "a13b324f",
    "metadata": {},
    "outputs": [
@@ -529,6 +529,201 @@
       " 11  cuota_limpieza        3818 non-null   object\n",
       " 12  precio                3818 non-null   object\n",
       "dtypes: object(13)\n",
+      "memory usage: 387.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "datos_explode.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7948dfe",
+   "metadata": {},
+   "source": [
+    "### Importamos la Biblioteca numerica de Numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a1ec3560",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e5c1ef4",
+   "metadata": {},
+   "source": [
+    "### Convertimos la Columna a Tipo Numerico Entero"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b4e68397",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datos_explode['max_hospedes'] = datos_explode['max_hospedes'].astype(np.int64) # Convertimos la columna 'max_hospedes' a tipo entero\n",
+    "                                                               # No Funciona si algun valor no es Entero\n",
+    "                                                           "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0ba47e2",
+   "metadata": {},
+   "source": [
+    "### Cambiar el tipo de Dato a Varias Columnas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5b8d9321",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "col_numericas = ['cantidad_baños', 'cantidad_cuartos', 'cantidad_camas'] # listamos las columnas que van a ser convertidas a numéricas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0e461262",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3818 entries, 0 to 3817\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column                Non-Null Count  Dtype \n",
+      "---  ------                --------------  ----- \n",
+      " 0   evaluacion_general    3818 non-null   object\n",
+      " 1   experiencia_local     3818 non-null   object\n",
+      " 2   max_hospedes          3818 non-null   int64 \n",
+      " 3   descripcion_local     3818 non-null   object\n",
+      " 4   descripcion_vecindad  3818 non-null   object\n",
+      " 5   cantidad_baños        3818 non-null   int64 \n",
+      " 6   cantidad_cuartos      3818 non-null   int64 \n",
+      " 7   cantidad_camas        3818 non-null   int64 \n",
+      " 8   modelo_cama           3818 non-null   object\n",
+      " 9   comodidades           3818 non-null   object\n",
+      " 10  cuota_deposito        3818 non-null   object\n",
+      " 11  cuota_limpieza        3818 non-null   object\n",
+      " 12  precio                3818 non-null   object\n",
+      "dtypes: int64(4), object(9)\n",
+      "memory usage: 387.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "datos_explode[col_numericas] = datos_explode[col_numericas].astype(np.int64)  # Convertimos las columnas a tipo entero\n",
+    "datos_explode.info()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7928ee98",
+   "metadata": {},
+   "source": [
+    "### Convertimos la tabla evaluacion_general en float - por que tiene un punto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "2da5f56d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3818 entries, 0 to 3817\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column                Non-Null Count  Dtype  \n",
+      "---  ------                --------------  -----  \n",
+      " 0   evaluacion_general    3162 non-null   float64\n",
+      " 1   experiencia_local     3818 non-null   object \n",
+      " 2   max_hospedes          3818 non-null   int64  \n",
+      " 3   descripcion_local     3818 non-null   object \n",
+      " 4   descripcion_vecindad  3818 non-null   object \n",
+      " 5   cantidad_baños        3818 non-null   int64  \n",
+      " 6   cantidad_cuartos      3818 non-null   int64  \n",
+      " 7   cantidad_camas        3818 non-null   int64  \n",
+      " 8   modelo_cama           3818 non-null   object \n",
+      " 9   comodidades           3818 non-null   object \n",
+      " 10  cuota_deposito        3818 non-null   object \n",
+      " 11  cuota_limpieza        3818 non-null   object \n",
+      " 12  precio                3818 non-null   object \n",
+      "dtypes: float64(1), int64(4), object(8)\n",
+      "memory usage: 387.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "datos_explode['evaluacion_general'] = datos_explode['evaluacion_general'].astype(np.float64)  # Convertimos la columna a tipo float\n",
+    "datos_explode.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c1366c9",
+   "metadata": {},
+   "source": [
+    "### Examinando la Tabla Precio - Ya que el numero tiene un signo de $"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d87acc6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datos_explode['precio'] = datos_explode['precio'].apply(lambda x: float(x.replace('$', '').replace(',', '').strip()))  # Limpiamos y convertimos la columna 'precio' a tipo float"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "6548b8cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3818 entries, 0 to 3817\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column                Non-Null Count  Dtype  \n",
+      "---  ------                --------------  -----  \n",
+      " 0   evaluacion_general    3162 non-null   float64\n",
+      " 1   experiencia_local     3818 non-null   object \n",
+      " 2   max_hospedes          3818 non-null   int64  \n",
+      " 3   descripcion_local     3818 non-null   object \n",
+      " 4   descripcion_vecindad  3818 non-null   object \n",
+      " 5   cantidad_baños        3818 non-null   int64  \n",
+      " 6   cantidad_cuartos      3818 non-null   int64  \n",
+      " 7   cantidad_camas        3818 non-null   int64  \n",
+      " 8   modelo_cama           3818 non-null   object \n",
+      " 9   comodidades           3818 non-null   object \n",
+      " 10  cuota_deposito        3818 non-null   object \n",
+      " 11  cuota_limpieza        3818 non-null   object \n",
+      " 12  precio                3818 non-null   float64\n",
+      "dtypes: float64(2), int64(4), object(7)\n",
       "memory usage: 387.9+ KB\n"
      ]
     }
