--- a/conociendo_el_problema/entendiendo_el_problema.ipynb
+++ b/conociendo_el_problema/entendiendo_el_problema.ipynb
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "5b8d9321",
    "metadata": {},
    "outputs": [],
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "0e461262",
    "metadata": {},
    "outputs": [
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "2da5f56d",
    "metadata": {},
    "outputs": [
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "d87acc6b",
    "metadata": {},
    "outputs": [],
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "6548b8cc",
    "metadata": {},
    "outputs": [
@@ -724,6 +724,72 @@
       " 11  cuota_limpieza        3818 non-null   object \n",
       " 12  precio                3818 non-null   float64\n",
       "dtypes: float64(2), int64(4), object(7)\n",
+      "memory usage: 387.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "datos_explode.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15cb5b91",
+   "metadata": {},
+   "source": [
+    "### Examinando las tablas - cuota_deposito, cuota_limpiza\n",
+    "```Aplicando => map``` que es para DataFrames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "9e251330",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datos_explode[['cuota_deposito', 'cuota_limpieza']] = datos_explode[['cuota_deposito', 'cuota_limpieza']].map(lambda x: float(x.replace('$', '').replace(',', '').strip())) # Limpiamos y convertimos las columnas 'cuota_deposito' y 'cuota_limpieza' a tipo float"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a3c0ca70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datos_explode[['cuota_deposito', 'cuota_limpieza']] = datos_explode[['cuota_deposito', 'cuota_limpieza']].astype(np.float64) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "a475d3f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3818 entries, 0 to 3817\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column                Non-Null Count  Dtype  \n",
+      "---  ------                --------------  -----  \n",
+      " 0   evaluacion_general    3162 non-null   float64\n",
+      " 1   experiencia_local     3818 non-null   object \n",
+      " 2   max_hospedes          3818 non-null   int64  \n",
+      " 3   descripcion_local     3818 non-null   object \n",
+      " 4   descripcion_vecindad  3818 non-null   object \n",
+      " 5   cantidad_baños        3818 non-null   int64  \n",
+      " 6   cantidad_cuartos      3818 non-null   int64  \n",
+      " 7   cantidad_camas        3818 non-null   int64  \n",
+      " 8   modelo_cama           3818 non-null   object \n",
+      " 9   comodidades           3818 non-null   object \n",
+      " 10  cuota_deposito        3818 non-null   float64\n",
+      " 11  cuota_limpieza        3818 non-null   float64\n",
+      " 12  precio                3818 non-null   float64\n",
+      "dtypes: float64(4), int64(4), object(5)\n",
       "memory usage: 387.9+ KB\n"
      ]
     }
