--- a/desafios_proyectos/desafios.ipynb
+++ b/desafios_proyectos/desafios.ipynb
@@ -1188,12 +1188,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "4a80c62c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "datos['Data de venda'] = pd.to_datetime(datos['Data de venda'], format='%d/%m/%Y')"
+    "datos['Data de venda'] = pd.to_datetime(datos['Data de venda'], format='%d/%m/%Y') # Convierte la columna a formato datetime"
    ]
   },
   {
